# Koentji

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  docker-compose.yml  package-lock.json  tailwind.config.js
.claude-refactor/: PROGRESS.md
.github/workflows/: build.yml  e2e.yml  lint.yml  release.yml  test.yml
clickhouse/config.d/: low-mem.xml
clickhouse/migrations/: 0001_auth_events.sql
deployment/: .env.example  Makefile  docker-compose.yml
end2end/: .gitignore  README.md  global-setup.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
end2end/fixtures/: clickhouse.ts  db.ts  env.ts
end2end/tests/analytics/: analytics.spec.ts
end2end/tests/api/: auth-errors.spec.ts  auth-success.spec.ts  auth-v1-clickhouse.spec.ts  auth-v1-fractional.spec.ts  auth-v1-sentinel.spec.ts  auth-v2-clickhouse.spec.ts  auth-v2-sentinel.spec.ts  auth-v2.spec.ts  envelope-shape.spec.ts  free-trial-concurrency.spec.ts  free-trial.spec.ts  health.spec.ts  rate-limit-reset.spec.ts  request-id.spec.ts  unclaimed-device.spec.ts
end2end/tests/auth/: login.spec.ts  logout.spec.ts  navbar.spec.ts  protected-routes.spec.ts  zz-admin-lockout.spec.ts
end2end/tests/dashboard/: insights.spec.ts  stats.spec.ts
end2end/tests/keys/: create.spec.ts  delete.spec.ts  edit.spec.ts  extend-expiration.spec.ts  list-filter.spec.ts  modal-a11y.spec.ts  reassign-device-eviction.spec.ts  reset-rate-limit.spec.ts  reveal.spec.ts  url-filters.spec.ts
end2end/tests/rate-limits/: crud.spec.ts
end2end/tests/smoke/: hydration.spec.ts  public-pages.spec.ts
end2end/tests/subscriptions/: crud.spec.ts
migrations/: 001_create_auth_keys.sql  002_create_subscription_and_rate_limit_tables.sql  003_drop_unique_key_constraint.sql  004_unique_key_device.sql  005_audit_log.sql  006_rate_limit_to_double.sql
nginx/: default.conf
public/js/: analytics_charts.js  charts.js
src/: app.rs  auth.rs  cache.rs  clickhouse_db.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  rate_limit.rs
src/application/: authenticate_api_key.rs  extend_expiration.rs  issue_key.rs  mod.rs  reassign_device.rs  reset_rate_limit.rs  revoke_key.rs  unrevoke_key.rs
src/components/: charts.rs  date_range_picker.rs  key_form.rs  key_row.rs  key_table.rs  layout.rs  mod.rs  modal.rs  toast.rs
src/components/design/: badge.rs  input.rs  mod.rs  select.rs  surface.rs
src/domain/: errors.rs  mod.rs
src/domain/admin_access/: admin_credentials.rs  constant_time.rs  login_attempt_ledger.rs  mod.rs
src/domain/authentication/: audit_event_port.rs  auth_cache_port.rs  auth_decision.rs  auth_event.rs  auth_event_sink.rs  auth_key.rs  device_id.rs  events.rs  issued_key.rs  issued_key_repository.rs  mod.rs  rate_limit.rs  subscription_name.rs
src/infrastructure/: mod.rs
src/infrastructure/cache/: mod.rs  moka_auth_cache.rs
src/infrastructure/clickhouse/: auth_event_sink.rs  mod.rs
src/infrastructure/hashing/: argon2_hasher.rs  mod.rs
src/infrastructure/postgres/: audit_event_repository.rs  issued_key_repository.rs  mod.rs
src/infrastructure/telemetry/: access_log.rs  mod.rs  request_id.rs
src/interface/: mod.rs
src/interface/http/: auth_endpoint.rs  auth_v2_endpoint.rs  health.rs  i18n.rs  mod.rs
src/pages/: about.rs  dashboard.rs  keys.rs  landing.rs  login.rs  mod.rs  privacy.rs  quickstart.rs  rate_limits.rs  subscriptions.rs  terms.rs
src/server/: analytics_service.rs  insights_service.rs  key_service.rs  mod.rs  rate_limit_service.rs  stats_service.rs  subscription_service.rs
src/ui/: mod.rs  tz.rs
src/ui/admin_access/: mod.rs  page.rs
src/ui/analytics/: charts.rs  mod.rs  page.rs  panels.rs  summary_cards.rs  tables.rs
src/ui/dashboard/: activity_feed.rs  date_range_picker.rs  expiring_keys.rs  key_hygiene.rs  mod.rs  page.rs  stats_cards.rs  tier_health.rs
src/ui/design/: badge.rs  button.rs  data_table.rs  input.rs  mod.rs  modal.rs  page_header.rs  stack.rs  toast.rs
src/ui/keys/: key_form.rs  key_row.rs  key_table.rs  mod.rs  page.rs
src/ui/marketing/: about.rs  landing.rs  mod.rs  privacy.rs  quickstart.rs  terms.rs
src/ui/rate_limits/: mod.rs  page.rs
src/ui/shell/: layout.rs  mod.rs
src/ui/subscriptions/: mod.rs  page.rs
tests/: clickhouse_sink_smoke.rs  harness_smoke.rs  health_endpoints.rs  key_management_use_cases.rs  postgres_audit_event_repository.rs  postgres_dashboard_insights.rs  postgres_issued_key_repository.rs  rate_limit_atomic.rs  schema_constraints.rs  stats_date_range.rs
tests/common/: clock.rs  db.rs  key_builder.rs  mod.rs
