[package]
name = "koentji"
version = "0.1.4"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "koentji"
path = "src/main.rs"

[[bin]]
name = "hash-admin-password"
path = "src/bin/hash_admin_password.rs"
required-features = ["ssr"]

[dependencies]
leptos = { version = "0.8" }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
leptos_actix = { version = "0.8", optional = true }
actix-web = { version = "4", optional = true }
actix-files = { version = "0.6", optional = true }
actix-session = { version = "0.10", features = ["cookie-session"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"], optional = true }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8", optional = true }
base64 = { version = "0.22", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
dotenvy = { version = "0.15", optional = true }
utoipa = { version = "4", features = ["actix_extras", "chrono"], optional = true }
utoipa-swagger-ui = { version = "7", features = ["actix-web"], optional = true }
moka = { version = "0.12", features = ["future"], optional = true }
env_logger = { version = "0.11", optional = true }
async-trait = { version = "0.1", optional = true }
argon2 = { version = "0.5", optional = true }
password-hash = { version = "0.5", features = ["alloc"], optional = true }
subtle = { version = "2", optional = true }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
http = "1"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "Navigator"] }
js-sys = "0.3"

[features]
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate"]
ssr = [
    "dep:actix-web",
    "dep:actix-files",
    "dep:actix-session",
    "dep:leptos_actix",
    "dep:sqlx",
    "dep:rand",
    "dep:base64",
    "dep:tokio",
    "dep:dotenvy",
    "dep:utoipa",
    "dep:utoipa-swagger-ui",
    "dep:moka",
    "dep:env_logger",
    "dep:async-trait",
    "dep:argon2",
    "dep:password-hash",
    "dep:subtle",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
bin-target = "koentji"
output-name = "koentji"
site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "public"
style-file = "style/output.css"
site-addr = "127.0.0.1:3000"
reload-port = 3001
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
browserquery = "defaults"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
tailwind-command = "npx tailwindcss"
tailwind-input-file = "style/input.css"
tailwind-config-file = "tailwind.config.js"
