[package]
name = "koentji"
version = "0.2.5"
edition = "2021"
default-run = "koentji"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "koentji"
path = "src/main.rs"

[[bin]]
name = "hash-admin-password"
path = "src/bin/hash_admin_password.rs"
required-features = ["ssr"]

[dependencies]
leptos = { version = "0.8" }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
leptos_actix = { version = "0.8", optional = true }
# Direct tachys dep solely to switch on `mark_branches`. leptos pulls tachys
# in transitively but only enables this feature via `islands-router`, which we
# don't want. Declaring tachys here with the feature lets Cargo's feature
# unification turn it on for the *same* tachys leptos compiles — in both the
# wasm (hydrate) and native (ssr) graphs — so branches get `<!--bo/bc-->`
# markers the hydration cursor can skip. Without it, conditional branches
# (`Show`/`if`/match) hydrate by raw structure and desync into a tachys
# `failed_to_cast_marker_node` panic (the `/keys` "unreachable" hydration bug).
tachys = { version = "0.2", features = ["mark_branches"] }
actix-web = { version = "4", optional = true }
actix-files = { version = "0.6", optional = true }
actix-session = { version = "0.10", features = ["cookie-session"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"], optional = true }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8", optional = true }
base64 = { version = "0.22", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
dotenvy = { version = "0.15", optional = true }
utoipa = { version = "4", features = ["actix_extras", "chrono"], optional = true }
utoipa-swagger-ui = { version = "7", features = ["actix-web"], optional = true }
moka = { version = "0.12", features = ["future"], optional = true }
env_logger = { version = "0.11", optional = true }
async-trait = { version = "0.1", optional = true }
argon2 = { version = "0.5", optional = true }
password-hash = { version = "0.5", features = ["alloc"], optional = true }
subtle = { version = "2", optional = true }
uuid = { version = "1", features = ["v7"], optional = true }
clickhouse = { version = "0.13", features = ["uuid", "chrono"], optional = true }
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "line_series", "area_series", "ttf"], optional = true }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
http = "1"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlDocument", "Element", "HtmlElement", "HtmlTextAreaElement", "Navigator", "Clipboard", "NodeList", "Node"] }
js-sys = "0.3"

[features]
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate"]
ssr = [
    "dep:actix-web",
    "dep:actix-files",
    "dep:actix-session",
    "dep:leptos_actix",
    "dep:sqlx",
    "dep:rand",
    "dep:base64",
    "dep:tokio",
    "dep:dotenvy",
    "dep:utoipa",
    "dep:utoipa-swagger-ui",
    "dep:moka",
    "dep:env_logger",
    "dep:async-trait",
    "dep:argon2",
    "dep:password-hash",
    "dep:subtle",
    "dep:uuid",
    "dep:clickhouse",
    "dep:plotters",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[profile.dev]
debug = "line-tables-only"
incremental = false

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
bin-target = "koentji"
output-name = "koentji"
# Content-hash the js/wasm/css filenames (koentji.<hash>.*) so each release
# ships new URLs and returning visitors can't run a stale cached bundle (the
# cache trap that resurfaces hydration panics). Requires, at runtime:
#   * LEPTOS_HASH_FILES=true in the environment (this flag is NOT baked into
#     the binary — leptos reads it from the runtime env), and
#   * hash.txt sitting next to the server binary (current_exe dir);
# both are wired up in the Dockerfile. The CSS link is emitted via
# <HashedStylesheet> (see src/main.rs) instead of a hard-coded href.
hash-files = true
site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "public"
style-file = "style/output.css"
site-addr = "127.0.0.1:3000"
reload-port = 3001
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
browserquery = "defaults"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
tailwind-command = "npx tailwindcss"
tailwind-input-file = "style/input.css"
tailwind-config-file = "tailwind.config.js"
